Drop Apache Commons and Log4J Over SLF4J dependencies
Bump Java to 11 and web-commons-bom to 34